Added the versions to the code
