# src/vng/api/v1/design_rules/serializers.py
@@ -1,6 +1,42 @@
+from django.core.exceptions import ObjectDoesNotExist
+from django.utils.translation import gettext_lazy as _
+
 from rest_framework import serializers
 
-from vng.design_rules.models import DesignRuleTestSuite, DesignRuleSession, DesignRuleResult
+from vng.design_rules.models import DesignRuleTestSuite, DesignRuleSession, DesignRuleResult, DesignRuleTestVersion, DesignRuleTestOption
+
+
+class TestVersionField(serializers.Field):
+    default_error_messages = {
+        'required': _('This field is required.'),
+        'null': _('This field may not be null.'),
+        'invalid': _('A valid integer is required.'),
+        'does_not_exist': _('Invalid pk "{pk_value}" - object does not exist.'),
+        'version_inactive': _('The test version "{test_version}" is inactive.'),
+    }
+
+    def to_internal_value(self, data):
+        try:
+            data = int(str(data))
+            test_versions = DesignRuleTestVersion.objects.filter(pk=data)
+            if test_versions.exists():
+                test_version = test_versions.first()
+                test_versions = test_versions.filter(is_active=True)
+                if test_versions.exists():
+                    return test_version
+                self.fail('version_inactive', test_version=test_version)
+                return data
+            else:
+                self.fail('does_not_exist', pk_value=data)
+                return data
+            test_version = DesignRuleTestVersion.objects.get(pk=data)
+            return test_version
+        except (ValueError, TypeError):
+            self.fail('invalid')
+            return data
+
+    def to_representation(self, value):
+        return value
 
 
 class DynamicFieldsModelSerializer(serializers.ModelSerializer):
@@ -26,6 +62,26 @@ class DynamicFieldsModelSerializer(serializers.ModelSerializer):
 
 class NoneSerializer(serializers.Serializer):
     pass
+
+
+class StartSessionSerializer(serializers.Serializer):
+    test_version = TestVersionField()
+
+
+class DesignRuleTestOptionSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = DesignRuleTestOption
+        fields = ("rule_type", )
+        read_only_fields = ("rule_type", )
+
+
+class DesignRuleTestVersionSerializer(serializers.ModelSerializer):
+    test_rules = DesignRuleTestOptionSerializer(many=True, read_only=True)
+
+    class Meta:
+        model = DesignRuleTestVersion
+        fields = ("id", "version", "name", "test_rules")
+        read_only_fields = ("id", "version", "name")
 
 
 class DesignRuleResultSerializer(serializers.ModelSerializer):
