# src/vng/api/v1/design_rules/urls.py
@@ -2,13 +2,14 @@ from django.urls import path
 
 from rest_framework import routers
 
-from .viewsets import DesignRuleSessionViewSet, DesignRuleTestSuiteViewSet, DesignRuleSessionShieldView
+from .viewsets import DesignRuleSessionViewSet, DesignRuleTestSuiteViewSet, DesignRuleSessionShieldView, DesignRuleTestVersionViewSet
 
 
 app_name = "design_rules_api"
 
 
 router = routers.SimpleRouter(trailing_slash=False)
+router.register('designrule-testversion', DesignRuleTestVersionViewSet, 'test_versions')
 router.register('designrule-testsuite', DesignRuleTestSuiteViewSet, 'test_suite')
 router.register('designrule-session', DesignRuleSessionViewSet, 'session')
 # router.register('designrule-result', DesignRuleResultViewSet, 'result')
