# src/vng/design_rules/models.py
@@ -4,19 +4,37 @@ from uuid import uuid4
 from django.db import models
 from django.utils.translation import ugettext_lazy as _
 
-from vng.servervalidation.models import API
-
-from .tasks.base import run_tests
+from ordered_model.models import OrderedModel
 
 from .choices import DesignRuleChoices
+from .tasks.base import run_tests
+
+
+class DesignRuleTestVersion(models.Model):
+    version = models.CharField(default="", max_length=200)
+    name = models.CharField(default="", max_length=200)
+    is_active = models.BooleanField(default=False, blank=True)
+
+    def __str__(self):
+        return "{} - {}".format(self.version, self.name)
+
+
+class DesignRuleTestOption(OrderedModel):
+    test_version = models.ForeignKey(DesignRuleTestVersion, null=True, on_delete=models.CASCADE, related_name="test_rules")
+    rule_type = models.CharField(max_length=50, default="", choices=DesignRuleChoices.choices)
+
+    order_with_respect_to = 'test_version'
+
+    class Meta(OrderedModel.Meta):
+        pass
 
 
 class DesignRuleTestSuite(models.Model):
     uuid = models.UUIDField(default=uuid4)
     api_endpoint = models.URLField()
 
-    def start_session(self):
-        session = self.sessions.create()
+    def start_session(self, test_version):
+        session = self.sessions.create(test_version=test_version)
         session.start_tests(self.api_endpoint)
         return session
 
@@ -44,6 +62,7 @@ class DesignRuleSession(models.Model):
     started_at = models.DateTimeField(auto_now_add=True)
     json_result = models.TextField(blank=True, null=True, default=None, help_text=_("This is the downloaded api spec"))
     percentage_score = models.DecimalField(default=0, decimal_places=2, max_digits=5)
+    test_version = models.ForeignKey(DesignRuleTestVersion, null=True, on_delete=models.CASCADE)
 
     class Meta:
         ordering = ("-started_at", )
